--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -264,10 +264,14 @@ services:
       DATABASE_URL: postgres://supabase_storage_admin:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
       FILE_SIZE_LIMIT: 52428800
       STORAGE_BACKEND: s3
-      TENANT_ID: stub
+      TENANT_ID: scp
       # TODO: https://github.com/supabase/storage-api/issues/55
       REGION: ap-southeast-2
       GLOBAL_S3_BUCKET: simulnetic-central-files
+      GLOBAL_S3_PROTOCOL: s3
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+      AWS_DEFAULT_REGION: ap-southeast-2
       ENABLE_IMAGE_TRANSFORMATION: "true"
       IMGPROXY_URL: http://imgproxy:5001
 
