--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -264,7 +264,7 @@ services:
       DATABASE_URL: postgres://supabase_storage_admin:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
       FILE_SIZE_LIMIT: 52428800
       STORAGE_BACKEND: s3
-      TENANT_ID: scp
+      TENANT_ID: supabase
       # TODO: https://github.com/supabase/storage-api/issues/55
       REGION: ap-southeast-2
       GLOBAL_S3_BUCKET: simulnetic-cloud-platform
